SERVER-17515 fixed namespace in oplog entry when using the cloner to copy indexes

(cherry picked from commit 8e6d7dc39c51c58d0158071a717113314c26b0a0)